# mcmini

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  COPYING.md  LICENSE.md  MCProgress.h  Makefile.in  Makefile_llvm  NEWS  README.md  config.cmake  configure  configure.ac  gdbinit  gdbinit.mcmini  gdbinit_annotate  gdbinit_commands.py  mcmini-annotate  mcmini-annotate.py  mcmini-dmtcp-plugin.cpp  mcmini-dmtcp-plugin.h  mcmini-gdb.in  mcmini-oldsys.patch  mcmini_dmtcp_plugin.cpp  mcmini_dmtcp_plugin.h  oldsys-patch.sh  target.c  test_script
dmtcp/: BUG.README  CMakeLists.txt  Cond_Var_Readme.md  mcmini-architecture.md
dmtcp/include/: dmtcp.h
dmtcp/script/: debug-mcmini-child.py  debug-mcmini-dmtcp.py
dmtcp/test/: CMakeLists.txt
docs/design/: CMakeLists.txt  mcmini-architecture.md  mcmini-future-design.md
src/: CMakeLists.txt  GMAL.cpp  GMAL.h  GMALConstants.h  GMALDeferred.h  GMALEnv.h  GMALMap.cpp  GMALMap.h  GMALMutex.cpp  GMALMutex.h  GMALObjectStore.cpp  GMALObjectStore.h  GMALRef.cpp  GMALRef.h  GMALShared.h  GMALSharedTransition.cpp  GMALSharedTransition.h  GMALState.cpp  GMALState.h  GMALStateConfiguration.cpp  GMALStateConfiguration.h  GMALStateStackItem.cpp  GMALStateStackItem.h  GMALThread.cpp  GMALThread.h  GMALThreadStart.cpp  GMALThreadStart.h  GMALTransition.cpp  GMALTransition.h  GMALTransitionFactory.cpp  GMALTransitionFactory.h  GMALVisibleObject.cpp  GMALVisibleObject.h  GMALWrappers.cpp  GMALWrappers.h  GMAL_Private.h  InstrumentMcMiniGlobals.cpp  MCClockVector.cpp  MCClockVector.hpp  MCCommon.c  (+79 more)
src/export/: rwwlock.c
src/misc/: CMakeCache.txt  GMALOptional.h  MCOptional.h  MCSortedStack.hpp  Makefile  cmake_install.cmake
src/objects/: CMakeCache.txt  GMALBarrier.cpp  GMALBarrier.h  GMALConditionVariable.cpp  GMALConditionVariable.h  GMALGlobalVariable.cpp  GMALGlobalVariable.h  GMALMutex.cpp  GMALMutex.h  GMALSemaphore.cpp  GMALSemaphore.h  GMALThread.cpp  GMALThread.h  GMALVisibleObject.h  MCBarrier.cpp  MCBarrier.h  MCConditionVariable.cpp  MCConditionVariable.h  MCGlobalVariable.cpp  MCGlobalVariable.h  MCMutex.cpp  MCMutex.h  MCRWLock.cpp  MCRWWLock.cpp  MCSemaphore.cpp  MCSemaphore.h  MCThread.cpp  MCThread.h  MCVisibleObject.cpp  MCVisibleObject.h  Makefile  cmake_install.cmake
src/transitions/: CMakeCache.txt  GMALBarrierInit.cpp  GMALBarrierInit.h  GMALBarrierTransition.cpp  GMALBarrierTransition.h  GMALBarrierWait.cpp  GMALBarrierWait.h  GMALCondBroadcast.cpp  GMALCondBroadcast.h  GMALCondEnqueue.cpp  GMALCondEnqueue.h  GMALCondInit.cpp  GMALCondInit.h  GMALCondSignal.cpp  GMALCondSignal.h  GMALCondTransition.cpp  GMALCondWait.cpp  GMALCondWait.h  GMALExitTransition.cpp  GMALExitTransition.h  GMALGlobalVariableRead.h  GMALGlobalVariableTransition.cpp  GMALGlobalVariableWrite.h  GMALMutexInit.cpp  GMALMutexInit.h  GMALMutexLock.cpp  GMALMutexLock.h  GMALMutexTransition.cpp  GMALMutexTransition.h  GMALMutexTransitionWrappers.cpp  GMALMutexTransitionWrappers.h  GMALMutexUnlock.cpp  GMALMutexUnlock.h  GMALSemInit.cpp  GMALSemInit.h  GMALSemPost.cpp  GMALSemPost.h  GMALSemWait.cpp  GMALSemWait.h  GMALSemaphoreTransition.cpp  (+37 more)
test/: CMakeLists.txt  CustomBarrier.c  CustomBarrier.h  CustomConditionVariable.c  CustomConditionVariable.h  CustomSemaphore.c  array_tests.cpp  hashtable_tests.cpp  test.h  test_common.h  transition_enabled_tests.cpp
test/data-races/: llvmDataRacePass.cpp  mutex-data-race.c  mutex-no-data-race.c  sem-no-data-race-1.c  sem-no-data-race-2.c  simple-data-race.c
test/deadlock_program/: barber_shop_deadlock.c  philosophers_custom_semaphore_deadlock.c  philosophers_mutex_deadlock  philosophers_mutex_deadlock.c  philosophers_semaphores_deadlock.c  philosophers_spurious_deadlock.c  producer_consumer_deadlock  producer_consumer_deadlock.c  producer_consumer_spurious.c  simple_barrier_with_threads_deadlock.c  simple_cond_braodcast_with_semaphore_deadlock2.c  simple_cond_broadcast_deadlock.c  simple_cond_broadcast_with_semaphore_deadlock1.c  simple_cond_deadlock  simple_cond_deadlock.c  simple_custom_cond_broadcast_deadlock.c  simple_mutex_with_threads_deadlock.c  simple_semaphore_deadlock.c  simple_semaphores_with_threads_deadlock.c
test/deadlock_programs/: barber_shop_deadlock.c  barber_shop_deadlock.cpp  philosophers_custom_semaphore_deadlock.c  philosophers_mutex_deadlock.c  philosophers_mutex_deadlock.cpp  philosophers_semaphores_deadlock.c  philosophers_semaphores_deadlock.cpp  producer_consumer_deadlock.c  producer_consumer_deadlock.cpp  simple_barrier_deadlock.cpp  simple_barrier_with_threads_deadlock.cpp  simple_cond_braodcast_with_semaphore_deadlock1.c  simple_cond_braodcast_with_semaphore_deadlock1.cpp  simple_cond_braodcast_with_semaphore_deadlock2.cpp  simple_cond_broadcast_deadlock.c  simple_cond_broadcast_deadlock.cpp  simple_cond_deadlock.cpp  simple_custom_cond_broadcast_deadlock.c  simple_mutex_deadlock.cpp  simple_mutex_with_threads_deadlock.c  simple_mutex_with_threads_deadlock.cpp  simple_semaphore_deadlock.cpp  simple_semaphores_deadlock.cpp  simple_semaphores_with_threads_deadlock.cpp
test/invalid_thread_op_arg_program/: condvar-two-mutexes.c  mutex-lock-unlock-two-owners.cpp  mutex-recursive-lock.cpp
test/output_deadlock/: barber_shop_first_deadlock.txt  philosophers_mutex_deadlock.txt  philosophers_mutex_first_deadlock.txt  philosophers_semaphores_deadlock.txt  philosophers_semaphores_first_deadlock.txt  producer_consumer_deadlock.txt  producer_consumer_first_deadlock.txt  reader_writer_deadlock.txt  reader_writer_fifo_deadlock.txt  reader_writer_fifo_first_deadlock.txt  simple_barrier_with_threads_deadlock.txt  simple_barrier_with_threads_first_deadlock.txt  simple_cond_broadcast_first_deadlock.txt  simple_cond_deadlock.txt
test/output_non_deadlock/: barber_shop.txt  philosophers_mutex.txt  philosophers_semaphores.txt  producer_consumer.txt  reader_writer_cond.txt  reader_writer_writer_preferred.txt  simple_barier_with_threads.txt  simple_cond.txt  (+5 more)
tests/: CMakeLists.txt  CustomConditionVariable.c  CustomSemaphore.h
(+813 files in other folders)
